# airshipper

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  flake.nix  rustfmt.toml
.gitlab/CI/: build.gitlab-ci.yml  check.gitlab-ci.yml  publish.gitlab-ci.yml
client/: Cargo.toml
client/assets/: net.veloren.airshipper.metainfo.xml
client/nsis/: installer.nsi
client/src/: assets.rs  consts.rs  error.rs  logger.rs  main.rs  nix.rs  profiles.rs  update.rs
client/src/cli/: mod.rs
client/src/gui/: custom_widgets.rs  mod.rs  rss_feed.rs
client/src/gui/components/: announcement_panel.rs  changelog_panel.rs  community_showcase_panel.rs  game_panel.rs  logo_panel.rs  news_panel.rs  server_browser_panel.rs
client/src/gui/style/: pick_list.rs  progress_bar.rs  rule.rs  text.rs  text_input.rs
client/src/gui/views/: default.rs  mod.rs  update.rs
client/src/io/: fs.rs  process.rs
client/src/update/: compare.rs  download.rs  local_directory.rs  mod.rs  remote.rs  remote_zip.rs  sync.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs  webhook.rs
server/src/db/: actions.rs
server/src/routes/: gitlab.rs
