cargo-features = []

[workspace]
members = ["client", "server"]
resolver = "2"


[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.debuginfo]
inherits = 'dev'
opt-level = 0
debug = true

[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
lto = true
debug = false
panic = "abort"          # don't need unwinding so we can skip including the landing pads for that
# line tables so we can have useful backtraces for in-house crates
[profile.release.package."airshipper"]
debug = 1
[profile.release.package."airshipper-server"]
debug = 1

[workspace.metadata.nix]
systems = ["x86_64-linux"]

### DEPENDENCIES ###

[workspace.dependencies]
# Cli
clap = { version = "4.5.21", features = ["cargo", "derive"] }
indicatif = "0.18"
rustyline = "17"
colored = "3"

# Logging
tracing = { version = "0.1.21", features = ["log"] }
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.3.7", default-features = false, features = [
    "env-filter",
    "fmt",
    "time",
    "ansi",
    "smallvec",
    "tracing-log",
] }
termcolor = "1.4"
tracing-appender = "0.2.0"
tracing-log = "0.2.0"
regex = "1.10"

# Networking
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
    "http2",
] }

# Parsing
strip_markdown = "0.2.0"
html2text = "0.15"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
ron = "0.12"
url = "2.2.2"

# Other
tokio = { version = "1.39", features = [
    "fs",
    "rt-multi-thread",
] }
derive_more = { version = "2", features = ["display"] }
find_folder = "0.3.0"
lazy_static = "1.4.0"
thiserror = "2.0.3"
bytesize = "2"
bytes = "1"
dirs = { package = "dirs-next", version = "2.0.0" }
chrono = { version = "0.4.38", features = ["serde"] }
