[package]
name = "airshipper"
description = "Provides automatic updates for the voxel RPG Veloren."
version = "0.16.0"
authors = ["Songtronix <contact@songtronix.com>"]
edition = "2018"
publish = true
default-run = "airshipper"
exclude = ["assets/fonts/GoNotoCurrent.ttf"]

license = "GPL-3.0"
homepage = "https://veloren.net"
repository = "https://gitlab.com/veloren/airshipper"

[package.metadata.nix]
build = true
app = true

[package.metadata.nix.desktopFile]
name = "Airshipper"
icon = "./client/assets/logo.ico"

[badges]
maintenance = { status = "actively-developed" }

[features]
# Windows cannot bundle ssl by default and as such this feature exists
# to bundle ssl in CI.
bundled = ["openssl-sys"]
bundled_font = []

[dependencies]
veloren-serverbrowser-api = "0.4.0"
veloren-query-server = { version = "0.1.2", default-features = false, features = [
    "client",
] }

# Cli
clap = { version = "4.5.21", features = ["cargo", "derive"] }
indicatif = "0.18"
rustyline = "17"
colored = "3"

# UI
iced = { version = "0.12.1", features = [
    "tokio",
    "image",
    "debug",
    "advanced",
] }

# Logging
tracing = { version = "0.1.21", features = ["log"] }
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.3.7", default-features = false, features = [
    "env-filter",
    "fmt",
    "time",
    "ansi",
    "smallvec",
    "tracing-log",
] }
termcolor = "1.1.3"
tracing-appender = "0.2.0"
tracing-log = "0.2.0"
regex = "1.10"
# Networking
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
    "json",
    "http2",
] }

# Parsing
pulldown-cmark = "0.13"
strip_markdown = "0.2.0"
html2text = "0.15"
serde = "1.0.116"
semver = "1"
rss = "2.0.7"
ron = "0.11"
remozipsy = "0.2.0"
crc32fast = "1.4.2"
flate2 = "1.0"
url = "2.2.2"
# Other
image = { version = "0.25.5", default-features = false, features = [
    "ico",
    "jpeg",
    "png",
    "webp",
] }
tokio = { version = "1.38", features = [
    "macros",
    "io-util",
    "process",
    "fs",
    "rt-multi-thread",
    "net",
    "sync",
] }
tokio-stream = { version = "0.1.6", features = ["io-util"] }
futures-util = "0.3.15"
derive_more = { version = "2", features = ["display"] }
find_folder = "0.3.0"
lazy_static = "1.4.0"
thiserror = "2.0.3"
bytesize = "2"
bytes = "1"
opener = "0.8"
dirs = { package = "dirs-next", version = "2.0.0" }
rand = "0.9"
chrono = { version = "0.4.22", features = ["serde"] }
country-parser = "0.1.1"

# bundle all the things!
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_UI",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }
self_update = { version = "0.42", features = ["archive-zip"] }

[build-dependencies]
winresource = "0.1.15"
