[package]
name = "airshipper-server"
version = "0.17.0"
edition = "2024"
publish = false

[package.metadata.nix]
build = true
app = true

[features]
# Windows cannot bundle ssl by default and as such this feature exists
# to bundle ssl in CI
bundled = ["openssl-sys"]

[dependencies]
tokio-util = { version = "0.7.8", features = ["codec"] }
tokio = { workspace = true }
futures = "0.3.8"
# logging
termcolor = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
# config handling
ron = { workspace = true }
regex = { workspace = true }

axum = "0.8"
tower-http = { version = "0.6.2", features = ["fs"] }
# Networking
reqwest = { workspace = true, features = ["stream"] }
url = { workspace = true }
# Github
octocrab = { version = "0.44" }
# Serialising/Deserialising
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
# Database
sqlx = { version = "0.8.1", features = [
    "runtime-tokio",
    "postgres",
    "sqlite",
    "chrono",
    "any",
] }
# Error handling
thiserror = { workspace = true }
# other
chrono = { workspace = true }
lazy_static = { workspace = true }
prometheus = "0.14"
bytes = { workspace = true }
md5 = "0.8"
# bundle all the things!
libsqlite3-sys = { version = "*", features = ["bundled"] }
openssl-sys = { version = "*", features = ["vendored"], optional = true }
